[build-system]
requires = [
    'scikit-build-core>=0.9',
    'numpy>=2.0',
    'pybind11_stubgen',
    'tomli',
]
build-backend = "scikit_build_core.build"

[project]
name = "masspcf"
version = "0.4.0"
authors = [ { name="Bjorn H. Wehlin", email="bwehlin@kth.se" } ]
description = "Massively parallel computations for piecewise constant functions"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Environment :: GPU :: NVIDIA CUDA",
    "Topic :: Scientific/Engineering"
]
dependencies = [ "numpy>=2.0", "tqdm" ]

[project.urls]
Homepage = "https://github.com/bwehlin/masspcf"
Issues = "https://github.com/bwehlin/masspcf/issues"

[tool.cibuildwheel]
test-sources = ["test"]
test-requires = "pytest"
test-command = """
python ./test/print_wheel_contents.py && python -m pytest ./test
"""
# Skip 32-bit builds
skip = ["*-win32", "*-manylinux_i686"]

# Build `universal2` and `arm64` wheels on an Intel runner.
# Note that the `arm64` wheel and the `arm64` part of the `universal2`
# wheel cannot be tested in this configuration.
[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]

# On an Linux Intel runner with qemu installed, build Intel and ARM wheels
[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
