[build-system]
requires = [
    'scikit-build-core>=0.9',
    'numpy>=2.0',
    'pybind11_stubgen',
]
build-backend = "scikit_build_core.build"

[project]
name = "masspcf"
version = "0.4.0b7"
authors = [ { name="Bjorn H. Wehlin", email="bwehlin@kth.se" } ]
description = "Massively parallel computations for piecewise constant functions"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Environment :: GPU :: NVIDIA CUDA",
    "Topic :: Scientific/Engineering"
]
dependencies = [ "numpy>=2.0", "tqdm", "matplotlib" ]

[project.urls]
Homepage = "https://github.com/bwehlin/masspcf"
Issues = "https://github.com/bwehlin/masspcf/issues"

[tool.coverage.run]
source = ["masspcf"]
relative_files = true

[tool.coverage.paths]
# Map installed copies back to the source tree so the HTML report shows
# short paths like "masspcf/io.py" instead of the full tool-cache path.
masspcf = [
    "masspcf",               # source tree (editable / local runs)
    "*/masspcf",             # any prefix, e.g. site-packages/masspcf
]

[tool.cibuildwheel]
test-sources = ["test"]
test-requires = "pytest"
test-command = """
python ./test/print_wheel_contents.py && python -m pytest --verbose ./test
"""
# Skip 32-bit builds
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*",
    "cp*t-win_arm64", # Seems like t Python is missing on Win Arm atm
    #"cp*t-win_amd64"  # Skip Windows free-threaded until we can figure out build issues on GH Actions
]

# Build `universal2` and `arm64` wheels on an Intel runner.
# Note that the `arm64` wheel and the `arm64` part of the `universal2`
# wheel cannot be tested in this configuration.
[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

# On an Linux we build on separate x86_64 and ARM runners, so use auto here
[tool.cibuildwheel.linux]
archs = ["auto"]

[tool.cibuildwheel.windows]
archs = ["AMD64"] # Skip "ARM64" for now
