[build-system]
requires = [
    'scikit-build-core>=0.12',
    'numpy>=2.0',
    'pybind11_stubgen',
]
build-backend = "scikit_build_core.build"

[project]
name = "masspcf"
version = "0.4.0"
authors = [ { name="Bjorn H. Wehlin", email="bwehlin@kth.se" } ]
description = "Massively parallel computations for piecewise constant functions"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE.rst"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Environment :: GPU :: NVIDIA CUDA",
    "Topic :: Scientific/Engineering"
]
dependencies = [ "numpy>=2.0", "tqdm", "matplotlib" ]

[project.optional-dependencies]
sklearn = ["scikit-learn>=1.0"]

[tool.scikit-build]
minimum-version = "build-system.requires"
wheel.packages = ["masspcf"]
sdist.exclude = [
    ".*",
    "3rd/cuda",
    "3rd/gcc-runtime",
    "3rd/googletest",
    "3rd/pybind11/docs",
    "3rd/pybind11/tests",
    "3rd/pybind11/noxfile.py",
    "3rd/pybind11/setup.*",
    "3rd/pybind11/pybind11",
    "3rd/pybind11/.github",
    "3rd/pybind11/pyproject.toml",
    "3rd/taskflow/adsfund.json",
    "3rd/taskflow/images",
    "3rd/ripser",
    "3rd/splitmix64",
    "3rd/taskflow/3rd-party",
    "3rd/taskflow/benchmarks",
    "3rd/taskflow/docs",
    "3rd/taskflow/doxygen",
    "3rd/taskflow/examples",
    "3rd/taskflow/sandbox",
    "3rd/taskflow/tfprof",
    "3rd/taskflow/unittests",
    "3rd/xoroshiro",
    "benchmarking",
    "covreport",
    "docs",
    "examples",
    "gpucov",
    "test",
    "masspcf/*.so",
    "masspcf/*.pyi",
    "masspcf/py.typed",
    "masspcf/_mpcf_cpu",
    "masspcf/_mpcf_cuda*",
    "masspcf/_mpcf_cpp_cpu",
    "masspcf/_mpcf_cpp_cuda",
    "collect_sources*",
    "copydbg",
    "copypy",
    "environment.clion",
    "install_manifest.txt",
    "make_license_file.py",
    "mpcf.LICENSE.input",
    "pyrightconfig.json",
    "remove_cuda_from_env.bat",
    "run_coverage.sh",
    "update_submodules",
    "BUILDING.md",
    "CHANGELOG.md",
    "CLAUDE.md",
]

[project.urls]
Homepage = "https://github.com/bwehlin/masspcf"
Issues = "https://github.com/bwehlin/masspcf/issues"

[tool.coverage.run]
source = ["masspcf"]
relative_files = true

[tool.coverage.paths]
# Map installed copies back to the source tree so the HTML report shows
# short paths like "masspcf/io.py" instead of the full tool-cache path.
masspcf = [
    "masspcf",               # source tree (editable / local runs)
    "*/masspcf",             # any prefix, e.g. site-packages/masspcf
]

[tool.cibuildwheel]
test-sources = ["test"]
test-requires = ["pytest", "scipy", "pooch", "pandas", "xarray", "polars", "sktime"]
test-command = """
python ./test/print_wheel_contents.py && python -m pytest --verbose ./test
"""
# Skip 32-bit builds
skip = ["*-win32", "*-manylinux_i686", "*-musllinux*",
    "cp*t-win_arm64", # Seems like t Python is missing on Win Arm atm
    #"cp*t-win_amd64"  # Skip Windows free-threaded until we can figure out build issues on GH Actions
]

# Build `universal2` and `arm64` wheels on an Intel runner.
# Note that the `arm64` wheel and the `arm64` part of the `universal2`
# wheel cannot be tested in this configuration.
[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

# On an Linux we build on separate x86_64 and ARM runners, so use auto here
[tool.cibuildwheel.linux]
archs = ["auto"]

[tool.cibuildwheel.windows]
archs = ["AMD64"] # Skip "ARM64" for now

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors: style errors (whitespace, indentation, blank lines)
    "F",    # pyflakes: bug detection (undefined names, unused imports, redefined variables)
    "W",    # pycodestyle warnings: style warnings (trailing whitespace, blank lines with whitespace)
    "I",    # isort: consistent import ordering and grouping
    "UP",   # pyupgrade: modernize syntax for newer Python features (e.g. dict instead of typing.Dict)
    "B",    # flake8-bugbear: common pitfalls (mutable default args, bare except, unused loop variables)
    "SIM",  # flake8-simplify: simplifications (merge isinstance calls, collapse nested ifs, use context managers)
]
ignore = ["E501"]  # No line length enforcement

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports (re-exports)

[tool.ruff.lint.isort]
known-first-party = ["masspcf"]
